Fix!: Nav dropdown alignment fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,6 +105,12 @@ body {
   background: none;
 }
 
+.navbar-collapse {
+  padding-left: 50px;
+}
+  /*--------------------------------------------------------------
+# Header & Hero
+----------------------------------------------------------------*/
 #header {
   transition: all 0.5s;
   z-index: 997;
@@ -112,11 +118,9 @@ body {
   padding: 0;
   width: 100%;
   margin: 0;
-}
-  /*--------------------------------------------------------------
-# Header
-----------------------------------------------------------------*/
-  #hero {
+}  
+
+#hero {
     width: 100%;
     height: 100vh;
     background: #000;
